[package]
name = "home-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env-file-reader = "0.3.0"
rmp = "0.8.12"
rmp-serde = "1.1.2"
rodio = "0.17.3"
rust_socketio = "0.2.4"
serde_json = "1.0.59"
sfxr = "0.1.4"
